# cmake-refactor

./: .gitignore  .gitmodules  .ignore  CMake.g4  CMakeLexer.g4  CMakeParser.g4  NOTICE  README.md  build.py  pyproject.toml
.github/workflows/: python-package.yml
cmake_refactor/: cli.py  io.py  listeners.py
tests/: test_io.py  test_listeners.py
tests/files/: CMakeLists.txt  caching_cml.txt
tests/reprex/: CMakeLists.txt  README.md
tests/reprex/velox/io/: CMakeLists.txt  io.cpp
tests/reprex/velox/util/: CMakeLists.txt  util.h
